test/good/functions/args01.px

func f(x: Int = 9): Void def
    print x

f()
f(42)
