test/bad/functions/placeholder01.px

func f(_: Int): Void def
    return

f(_ = 0)
